--- a/css/dressup.css
+++ b/css/dressup.css
@@ -62,12 +62,15 @@ div#dressup {
     background-color: var(--button-background-color);
 }
 
-.dressupThumbnail:hover {
-    background-color: var(--button-hover-background-color);
-}
 
 .dressupThumbnail.selected {
     background-color: var(--button-active-color);
+}
+
+@media (hover: hover) {
+    .dressupThumbnail:hover {
+        background-color: var(--button-hover-background-color);
+    }
 }
 
 @media all and (max-width: 1024px)
