--- a/css/flashcards.css
+++ b/css/flashcards.css
@@ -24,12 +24,6 @@
     cursor: pointer;
 }
 
-.flashCardAnswers ul li:hover {
-    background: var(--button-hover-background-color);
-    color: var(--button-hover-color);
-    border-radius: 20px;
-}
-
 .flashCardFinishedTitle {
     background-color: var(--popup-inner-background-color);
     color: var(--popup-inner-color);
@@ -62,4 +56,12 @@
     padding-left: 0.2em;
     list-style-type: square;
     width: 10em;
+}
+
+@media (hover: hover) {
+    .flashCardAnswers ul li:hover {
+        background: var(--button-hover-background-color);
+        color: var(--button-hover-color);
+        border-radius: 20px;
+    }
 }
