--- a/css/quizzes.css
+++ b/css/quizzes.css
@@ -21,11 +21,6 @@
     flex: 1;
 }
 
-.quizOption:hover {
-    background: var(--tile-hover-background-color);
-    color: var(--tile-hover-color);
-}
-
 .quizQuestionQuestion {
     font-size: 2em;
     font-weight: bold;
@@ -44,23 +39,6 @@
     padding-bottom: 0.5em;
     padding-left: 0.2em;
     list-style-type: square;
-}
-
-.quizQuestionAnswers ul li:hover {
-    background: var(--button-hover-background-color);
-    color: var(--button-hover-color);
-    border-radius: 20px;
-}
-
-@media (hover: none) {
-    .quizOption:hover {
-        background: inherit;
-        color: inherit;
-    }
-    .quizQuestionAnswers ul li:hover {
-        background: inherit;
-        color: inherit;
-    }
 }
 
 .quizFinishedTitle {
@@ -111,11 +89,6 @@
     color: var(--button-color);
 }
 
-.detailsButton:hover {
-    text-decoration: underline;
-    color: var(--button-hover-color);
-}
-
 .details {
     display: flex;
     flex: 1;
@@ -158,4 +131,22 @@
 
 .chosenDescription {
     max-width: 50%;
+}
+
+@media (hover: hover) {
+    .quizOption:hover {
+        background: var(--tile-hover-background-color);
+        color: var(--tile-hover-color);
+    }
+
+    .quizQuestionAnswers ul li:hover {
+        background: var(--button-hover-background-color);
+        color: var(--button-hover-color);
+        border-radius: 20px;
+    }
+
+    .detailsButton:hover {
+        text-decoration: underline;
+        color: var(--button-hover-color);
+    }
 }
